# ams-isoftstat

./: .gitignore  CMakeLists.txt  README.md  ams-isoftrepo.files  ams-isoftstat.includes  ams-isoftstat9.files  ams-isoftstat9.includes
doc/: ams-stat-init.fb  firebird.txt  init.fb
etc/: CMakeLists.txt
etc/skel/: README
etc/systemd/system/: ams-isoftstat-9.0.service
share/: CMakeLists.txt
share/etc/: stat.xml
src/sbin/: CMakeLists.txt
src/sbin/ams-isoftstat/: AMSStatServer.cpp  AMSStatServer.hpp  AMSStatServerOptions.cpp  AMSStatServerOptions.hpp
