# ==============================================================================
# Advanced Batch System (ABS) CMake File
# ==============================================================================

# include subdirectories -------------------------------------------------------

INSTALL(DIRECTORY
            skel
        DESTINATION
            etc/
        )



